--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,195 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+* {
+	box-sizing: border-box;
+}
+html {
+	font-size: 62.5%;
+	width: 100%;
+	height: 100%;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+	font-family: 'Lato', sans-serif;
+	color: #353535;
+	font-size: 1.6rem;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: #f3f3fb;
+}
+svg text {
+	font-family: 'Lato', sans-serif;
+	font-weight: bold;
+}
+h1 {
+	text-align: center;
+	font-size: 3.6rem;
+	margin: 0 0 3rem 0
+}
+h2 {
+	font-size: 2.6rem;
+	margin: 0 0 2rem 0
+}
+h3 {
+	font-size: 1.8rem;
+	margin: 0 0 1.8rem 0
+}
+code {
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+	monospace;
+}
+#root,
+.wrapper {
+	width: 100%;
+	height: 100%;
+}
+.wrapper {
+	padding: 4rem 2rem 0 2rem;
+}
+.children {
+	display: block;
+	max-width: 30rem;
+	width: 100%;
+	margin: 0 auto 3rem auto;
+}
+.app {
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	max-width: 76rem;
+	width: 100%;
+	margin: auto;
+}
+.app__left,
+.app__right {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	height: 100%;
+	flex-shrink: 1;
+}
+.app__left {
+	max-width: 40rem;
+	width: 100%;
+	margin-right: 1rem;
+}
+.app__right {
+	max-width: 36rem;
+	width: 100%;
+	margin-left: 1rem;
+	
+}
+.app__box {
+	flex-shrink: 1;
+	width: 100%;
+	margin-bottom: 2rem;
+	padding: 2rem 4rem;
+	border: .1rem solid #272a541b;
+	background-color: #fff;
+	border-radius: 1rem;
+}
+.app__box.last {
+	margin-bottom: 0;
+	border-radius: 1rem 1rem 0 0;
+}
+.input {
+	font-weight: bold;
+	display: flex;
+	align-items: center;
+	margin-bottom: 1rem;
+	font-size: 2rem;
+}
+.input > :not(:last-child) {
+	margin-right: 2rem;
+}
+.input > :first-child {
+	width: 100%;
+}
+input {
+	height: 3.8rem;
+	border-radius: .6rem;
+	border: 1px solid #272a54;
+	width: 6rem;
+	color: #272a54;
+	text-align: center;
+	font-size: 2rem;
+	font-weight: 600;
+	font-family: 'Lato', sans-serif;
+}
+.gauge {
+	padding: 2rem 0;
+	background-color: #b9b9ce;
+	border-radius: 0 0 1rem 1rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.gauge svg {
+	margin: auto;
+	width: 100% !important;
+}
+
+@media screen and (min-width: 560px) and (max-width: 760px) {
+	.input,
+	input {
+		font-size: 1.6rem;
+	}
+	input{
+		width: 4.6rem;
+	}
+	h1 {
+		font-size: 3rem;
+	}
+	h2 {
+		font-size: 2rem;
+	}
+	h3 {
+		font-size: 1.6rem;
+	}
+	.app__box {
+		padding: 2rem 2.6rem;
+	}
+	.wrapper {
+		padding: 3rem 1rem 0 1rem;
+	}
+}
+
+@media screen and (max-width: 559px) {
+	.app {
+		flex-direction: column;
+	}
+	.app__left,
+	.app__right {
+		max-width: 100%;
+		margin: 0;
+	}
+	.app__box {
+		width: 100%
+	}
+}
+
+@media screen and (max-width: 420px) {
+	.input,
+	input {
+		font-size: 1.6rem;
+	}
+	input{
+		width: 4.6rem;
+	}
+	h1 {
+		font-size: 3rem;
+	}
+	h2 {
+		font-size: 2rem;
+	}
+	h3 {
+		font-size: 1.6rem;
+	}
+	.app__box {
+		padding: 2rem 2.6rem;
+	}
+	.wrapper {
+		padding: 3rem 1rem 0 1rem;
+	}
 }
