--- a/src/index.css
+++ b/src/index.css
@@ -193,3 +193,21 @@ input {
 		padding: 3rem 1rem 0 1rem;
 	}
 }
+
+@media print{
+	@page { margin: 3rem; }
+	body {
+		margin: 0;
+		padding: 0;
+	}
+	.wrapper {
+		padding: 0 !important;
+	}
+	svg text {
+		fill: #000 !important;
+	}
+	svg .needle path {
+		fill: #ccc !important;
+	}
+
+}
