--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,12 @@ code {
 .wrapper {
 	padding: 4rem 2rem 0 2rem;
 }
+.logo {
+	display: block;
+	max-width: 16rem;
+	width: 100%;
+	margin: 0 auto 3rem auto;
+}
 .engine {
 	display: block;
 	max-width: 43rem;
@@ -195,7 +201,7 @@ input {
 }
 
 @media print{
-	@page { margin: 3rem; }
+	@page { margin: 3rem; z-index: -2;}
 	body {
 		margin: 0;
 		padding: 0;
